complete ui with responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="logo-box">
                         <div class="logo">
-                            <img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png" alt="youtube">
+                            <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="youtube">
                         </div>
                         <div class="textbox">YouTube</div>
                     </div>
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </aside>
-                <div class="category-right">
+                <section class="category-right">
                     <div class="category-grid-row">
                         <div class="category-item-all">All</div>
                         <div class="category-item-col">Gaming</div>
@@ -188,14 +188,14 @@
                         <div class="category-item-col2">darama</div>
                         <div class="category-item-col2">mixes</div>
                         <div class="category-item-col2">Songs</div>
-                        <div class="category-item-col1">Live</div>
-                        <div class="category-item-col1">History</div>
-                        <div class="category-item-col1">Computer</div>
+                        <div class="category-item-col2">Live</div>
+                        <div class="category-item-col">History</div>
+                        <div class="category-item-col">Computer</div>
                         <div class="category-item-col1">Gadgets</div>
                         <div class="category-item-col1">Nature</div>
                         <div class="category-item-col1">Products</div>
                         <div class="category-item-col1">Dubbing</div>
-                        <div class="category-item-col1">Trivia</div>
+                        <div class="category-item-col2">Trivia</div>
                         <div class="image-box122">
                             <img src="all_images/arrow_forward.png" alt="Arrow">
                         </div>
@@ -289,7 +289,7 @@
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail">
-                                        <img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png" alt="Thumbnail">
+                                        <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
                                         <div class="image-title">Sanam Teri Kasam - A Heartfelt Love Story</div>
@@ -313,7 +313,7 @@
                         </div>  
                     </div> 
                     
-                    <!-- /////second video row/// -->
+                    <!-- /////second image row/// -->
                     <div class="img-container_two">
                         <div class="img-row-third">
                             <div class="img-item-second-row">
@@ -341,7 +341,7 @@
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail">
-                                        <img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png" alt="Thumbnail">
+                                        <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
                                         <div class="image-title"> Sylvester Stallone in THE RAMBO TRILOGY</div>
@@ -371,7 +371,7 @@
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail">
-                                        <img src="https://www.freeiconspng.com/thumbs/youtube-logo-png/hd-youtube-logo-png-transparent-background-20.png" alt="Thumbnail">
+                                        <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
                                         <div class="image-title">Badrinath Ki Dulhania - A Love Story with a Twist!</div>
@@ -417,7 +417,7 @@
                             </div>
                         </div>
                     </div> 
-                </div>
+                </section>
             </div>
         </main>
         <footer class="footer-container-box">
