Change all images

--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
                 <aside class="category-left">
                     <div class="sidbar-section">
                         <section class="section-tittle1">
-                            <div class="section-tittle-col1">
-                                <div class="images-box1">
+                            <div class="homebox">
+                                <div class="homeimages-box1">
                                     <img src="all_images/home.png" alt="Home">
                                 </div>
-                                <div class="tittlebox1">Home</div>
+                                <div class="hometittlebox1">Home</div>
+                            </div>
+                            <div class="homebox2">
+                                <div class="images-box2">
+                                    <img src="all_images/home.png" alt="Home">
+                                </div>
+                                <div class="hometittlebox2">Home</div>
                             </div>
                             <div class="section-tittle-col1">
                                 <div class="images-box1">
