changes in html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="underline1"></div>
 
                         <div class="section-tittle4">
-                            <div class="Subscriptions-box">Setting</div>
+                            <div class="Subscriptions-box">Settings</div>
                             <div class="section-tittle-col4">
                                 <div class="images-box4">
                                     <img src="all_images/settings_icon.png" alt="Setting">
@@ -219,25 +219,6 @@
                             <div class="image-item">
                                 <img src="https://media.istockphoto.com/id/1187807851/photo/kathak-costumes-with-colored-hands-legs-and-bells.jpg?s=612x612&w=0&k=20&c=Pc0OYoc72vGDWuE_-meM1omf_jPWWcsjKSr5j6sQbDg=" alt="Tere Dar Per Sanam song">
                             </div>
-                            <div class="image-item">
-                                <img src="https://m.media-amazon.com/images/M/MV5BZDg3MjJjMGEtYWFhMi00N2UxLWI0MjgtNWYxNWI1ZWYxNDM2XkEyXkFqcGc@._V1_QL75_UX429_.jpg" alt="The Kapil Sharma Show">
-                            </div>
-                        </div>
-                        <div class="img-row-second">
-                            <div class="image-item">
-                                <img src="https://wallpapercat.com/w/full/d/d/2/1068992-1920x1200-desktop-hd-tom-and-jerry-background-photo.jpg" alt="Tom-and-jerry">   
-                            </div>
-                            <div class="image-item">
-                                <img src="https://media.gettyimages.com/id/563818463/photo/band-performing-on-stage-at-music-concert.jpg?s=612x612&w=0&k=20&c=e0qzK3-5Wi07FErbiN-XQf-2RfJsSp8j_GG6n6_Kuvs=" alt="stage-at-music">                
-                            </div>
-                            <div class="image-item">
-                                <img src="https://i.pinimg.com/736x/0c/95/45/0c95456fc0aa449d203c184fe385c1d1.jpg" alt="bollywoodhungama">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="image-section-container">
-                        <div class="image-columnbox-one">
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail">
@@ -252,6 +233,11 @@
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="img-row-first">
+                            <div class="image-item">
+                                <img src="https://m.media-amazon.com/images/M/MV5BZDg3MjJjMGEtYWFhMi00N2UxLWI0MjgtNWYxNWI1ZWYxNDM2XkEyXkFqcGc@._V1_QL75_UX429_.jpg" alt="The Kapil Sharma Show">
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -269,7 +255,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="image-columnbox-two">
+                        <div class="img-row-second">
+                            <div class="image-item">
+                                <img src="https://wallpapercat.com/w/full/d/d/2/1068992-1920x1200-desktop-hd-tom-and-jerry-background-photo.jpg" alt="Tom-and-jerry">   
+                            </div>
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail">
@@ -284,6 +273,11 @@
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="img-row-second">
+                            <div class="image-item">
+                                <img src="https://media.gettyimages.com/id/563818463/photo/band-performing-on-stage-at-music-concert.jpg?s=612x612&w=0&k=20&c=e0qzK3-5Wi07FErbiN-XQf-2RfJsSp8j_GG6n6_Kuvs=" alt="stage-at-music">                
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -300,6 +294,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="img-row-second">
+                            <div class="image-item">
+                                <img src="https://i.pinimg.com/736x/0c/95/45/0c95456fc0aa449d203c184fe385c1d1.jpg" alt="bollywoodhungama">
+                            </div>
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail">
@@ -315,8 +314,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
+
                     <div class="icon-div">
                         <div class="icon-short">
                             <img src="https://i.pinimg.com/736x/7c/b3/6a/7cb36a5564c8d7aa4d3bde85f7e30e94.jpg" alt="Icone-short-img">
@@ -332,28 +332,6 @@
                             <div class="img-item-second-row">
                                 <img src="https://t4.ftcdn.net/jpg/10/58/31/97/360_F_1058319760_XIRW4B6xEimsisOMBHqdSwZPRlMPUZZc.webp" alt="RAMBO-Front-page">                       
                             </div>
-                            <div class="img-item-second-row">
-                                <img src="https://t4.ftcdn.net/jpg/09/07/82/47/240_F_907824791_WAce6o9HCCPVptj4ftDDKBJ9KhkvSBAd.jpg" alt="lord-krishna-vector">
-                            </div>
-                            <div class="img-item-second-row">
-                                <img src="https://thumbs.dreamstime.com/b/badrinath-temple-uttarakhand-india-snowfall-ancient-lord-vishnu-temple-badrinath-char-dham-uttarakhand-india-187823848.jpg" alt="Badrinaath">                     
-                            </div>
-                        </div>
-                        <div class="img-row-forth">
-                            <div class="img-item-second-row">
-                                <img src="https://s1.dmcdn.net/u/5QFP01clSsfc8YRrD/200x200" alt="Bablu-Dablu-Cubs">                  
-                            </div>
-                            <div class="img-item-second-row">
-                                <img src="https://t4.ftcdn.net/jpg/09/22/93/21/360_F_922932127_jwHa6rspjC0O1tM1cZz24RPN5w6UpZk1.jpg" alt="Little-Krishna">
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="image-section-container">
-                        <div class="image-columnbox-three">
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail1">
@@ -369,6 +347,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="img-row-third">
+                            <div class="img-item-second-row">
+                                <img src="https://t4.ftcdn.net/jpg/09/07/82/47/240_F_907824791_WAce6o9HCCPVptj4ftDDKBJ9KhkvSBAd.jpg" alt="lord-krishna-vector">
+                            </div>
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail1">
@@ -383,6 +366,11 @@
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="img-row-third">
+                            <div class="img-item-second-row">
+                                <img src="https://thumbs.dreamstime.com/b/badrinath-temple-uttarakhand-india-snowfall-ancient-lord-vishnu-temple-badrinath-char-dham-uttarakhand-india-187823848.jpg" alt="Badrinaath">                     
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -400,7 +388,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="image-columnbox-four">
+                        <div class="img-row-forth">
+                            <div class="img-item-second-row">
+                                <img src="https://s1.dmcdn.net/u/5QFP01clSsfc8YRrD/200x200" alt="Bablu-Dablu-Cubs">                  
+                            </div>
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail1">
@@ -415,6 +406,11 @@
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="img-row-forth">
+                            <div class="img-item-second-row">
+                                <img src="https://t4.ftcdn.net/jpg/09/22/93/21/360_F_922932127_jwHa6rspjC0O1tM1cZz24RPN5w6UpZk1.jpg" alt="Little-Krishna">
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -432,7 +428,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> 
+                    </div>
                 </section>
             </div>
         </main>
