--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img src="all_images/notifications_icon.png" alt="Notification Bell">
                     </div>
                     <div class="logo-icon">
-                        <img src="https://www.shutterstock.com/image-illustration/men-icon-png-illustration-vector-260nw-2481508411.jpg"  alt="Profile">
+                        <img src="all_images/account_circle_icon.png"  alt="Profile">
                     </div>
                 </div>
             </nav>
@@ -80,9 +80,9 @@
 
                             <div class="section-tittle-col1">
                                 <div class="images-box1">
-                                    <img src="all_images/youtube_music_icon.png" alt="Youtubemusic">
+                                    <img src="all_images/account_circle_icon.png" alt="Youtubemusic">
                                 </div>
-                                <div class="tittlebox1">Youtube Music</div>
+                                <div class="tittlebox1">You</div>
                             </div>
                             <div class="underline1"></div>
                         </section>
@@ -203,8 +203,9 @@
                         <div class="category-item-col2">mixes</div>
                         <div class="category-item-col2">Songs</div>
                         <div class="category-item-col2">Live</div>
+                        <div class="category-item-col1">Live</div>
                         <div class="category-item-col">History</div>
-                        <div class="category-item-col">Computer</div>
+                        <div class="category-item-col1">Computer</div>
                         <div class="category-item-col1">Gadgets</div>
                         <div class="category-item-col1">Nature</div>
                         <div class="category-item-col1">Products</div>
@@ -220,7 +221,7 @@
                                 <img src="https://media.istockphoto.com/id/1187807851/photo/kathak-costumes-with-colored-hands-legs-and-bells.jpg?s=612x612&w=0&k=20&c=Pc0OYoc72vGDWuE_-meM1omf_jPWWcsjKSr5j6sQbDg=" alt="Tere Dar Per Sanam song">
                             </div>
                             <div class="image-column">
-                                <div class="image-list-card">
+                                <div class="image-list-card1">
                                     <div class="image-thumbnail">
                                         <img src="https://static.vecteezy.com/system/resources/previews/024/038/091/non_2x/badge-label-or-stamp-with-washington-skyline-illustration-free-vector.jpg" alt="washington-skyline">
                                     </div>
@@ -240,7 +241,7 @@
                                 <img src="https://m.media-amazon.com/images/M/MV5BZDg3MjJjMGEtYWFhMi00N2UxLWI0MjgtNWYxNWI1ZWYxNDM2XkEyXkFqcGc@._V1_QL75_UX429_.jpg" alt="The Kapil Sharma Show">
                             </div>
                             <div class="image-column">
-                                <div class="image-list-card">
+                                <div class="image-list-card1">
                                     <div class="image-thumbnail">
                                         <img src="https://yt3.ggpht.com/Qi3u7QLgftChW2syz1StjCw5Z_jPhbCFfNZj1d7DjC_tPk2Qp8Ea6O_Kb-5_fRy4-PPjS9TAnw=s48-c-k-c0x00ffffff-no-rj" alt="Thumbnail">
                                     </div>
@@ -260,7 +261,7 @@
                                 <img src="https://wallpapercat.com/w/full/d/d/2/1068992-1920x1200-desktop-hd-tom-and-jerry-background-photo.jpg" alt="Tom-and-jerry">   
                             </div>
                             <div class="image-column">
-                                <div class="image-list-card">
+                                <div class="image-list-card1">
                                     <div class="image-thumbnail">
                                         <img src="https://w7.pngwing.com/pngs/606/156/png-transparent-warner-home-video-burbank-warner-bros-interactive-entertainment-warner-bros-television-business-emblem-people-logo-thumbnail.png" alt="Thumbnail">
                                     </div>
@@ -280,7 +281,7 @@
                                 <img src="https://media.gettyimages.com/id/563818463/photo/band-performing-on-stage-at-music-concert.jpg?s=612x612&w=0&k=20&c=e0qzK3-5Wi07FErbiN-XQf-2RfJsSp8j_GG6n6_Kuvs=" alt="stage-at-music">                
                             </div>
                             <div class="image-column">
-                                <div class="image-list-card">
+                                <div class="image-list-card1">
                                     <div class="image-thumbnail">
                                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWfYhdygD6xWAVH1f6xh_944QYyQlexEItikCQz4jBxX-RllH-lYisG8fv-U-MDogCKLQ&usqp=CAU" alt="Thumbnail">
                                     </div>
@@ -300,7 +301,7 @@
                                 <img src="https://i.pinimg.com/736x/0c/95/45/0c95456fc0aa449d203c184fe385c1d1.jpg" alt="bollywoodhungama">
                             </div>
                             <div class="image-column">
-                                <div class="image-list-card">
+                                <div class="image-list-card1">
                                     <div class="image-thumbnail">
                                         <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
                                     </div>
@@ -421,6 +422,26 @@
                                         <div class="image-title">Little Krishna Song.</div>
                                         <div class="chainnel-name">Yuotube</div>
                                         <div class="views-status">1.6M views</div>
+                                    </div>
+                                    <div class="options-menubox">
+                                        <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img-row-forth">
+                            <div class="img-item-second-row">
+                                <img src="https://i.pinimg.com/236x/6f/b0/e6/6fb0e6c3a5e05f1685a0e441a234afec.jpg" alt="Sunset Over Ocean">                  
+                            </div>
+                            <div class="image-column">
+                                <div class="image-list-card">
+                                    <div class="image-thumbnail1">
+                                        <img src="https://i.pinimg.com/236x/55/d1/20/55d120615ec9bd3eaced030fb003dbca.jpg" alt="Thumbnail">
+                                    </div>
+                                    <div class="image-information">
+                                        <div class="image-title">Sunset Over Ocean</div>
+                                        <div class="chainnel-name ">Yuotube</div>
+                                        <div class="views-status">2.72M views</div>
                                     </div>
                                     <div class="options-menubox">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
