show images in responsive and change somthing

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                         <img src="https://static.vecteezy.com/system/resources/previews/024/038/091/non_2x/badge-label-or-stamp-with-washington-skyline-illustration-free-vector.jpg" alt="washington-skyline">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Kathak Dance with Colored Hands, Legs, and Bells</div>
+                                        <div class="image-title">Kathak Dance with Colored.</div>
                                         <div class="chainnel-name">youtube</div>
                                         <div class="views-status">27.7K views</div>
                                     </div>
@@ -246,7 +246,7 @@
                                         <img src="https://yt3.ggpht.com/Qi3u7QLgftChW2syz1StjCw5Z_jPhbCFfNZj1d7DjC_tPk2Qp8Ea6O_Kb-5_fRy4-PPjS9TAnw=s48-c-k-c0x00ffffff-no-rj" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">The Kapil Sharma Show | Dr. Gulati Ke Karname</div>
+                                        <div class="image-title">The Kapil Sharma Show</div>
                                         <div class="chainnel-name">Youtube</div>
                                         <div class="views-status">23.67M views</div>
                                     </div>
@@ -286,7 +286,7 @@
                                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWfYhdygD6xWAVH1f6xh_944QYyQlexEItikCQz4jBxX-RllH-lYisG8fv-U-MDogCKLQ&usqp=CAU" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Sangeet Ki Duniya: Feel the Music</div>
+                                        <div class="image-title">Sangeet Ki Duniya.</div>
                                         <div class="chainnel-name">Sangeet Junction</div>
                                         <div class="views-status">1.77M views</div>
                                     </div>
@@ -339,7 +339,7 @@
                                         <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title"> Bollywood Hungama News.</div>
+                                        <div class="image-title"> Bollywood Hungama.</div>
                                         <div class="chainnel-name">youtube</div>
                                         <div class="views-status">18.7K views</div>
                                     </div>
@@ -359,7 +359,7 @@
                                         <img src="https://static.vecteezy.com/system/resources/thumbnails/009/840/600/small/happy-krishna-janmashtami-lord-krishna-vector.jpg" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Little Krishna Vrindavan Ke.</div>
+                                        <div class="image-title">Little Krishna.</div>
                                         <div class="chainnel-name ">Yuotube</div>
                                         <div class="views-status">4.67M views</div>
                                     </div>
@@ -379,7 +379,7 @@
                                         <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Badrinath Temple in Snow.</div>
+                                        <div class="image-title">Badrinath Temple.</div>
                                         <div class="chainnel-name ">youtube</div>
                                         <div class="views-status">2.67M views</div>
                                     </div>
@@ -449,10 +449,56 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
+                        <div class="image-container">
+                            <div class="image-row-box">
+                                <div class="image-block">
+                                    <img src="https://wallpapercat.com/w/full/d/d/2/1068992-1920x1200-desktop-hd-tom-and-jerry-background-photo.jpg" alt="bollywoodhungama">
+                                </div>
+                                <div class="image-details">
+                                    <div class="image-card">
+                                        <div class="thumbnail-box">
+                                            <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
+                                        </div>
+                                        <div class="info-section">
+                                            <div class="video-title">Tom and Jerry</div>
+                                            <div class="channel-info">YouTube</div>
+                                            <div class="views-count">1.6M views</div>
+                                        </div>
+                                        <div class="menu-options">
+                                            <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image-row-box">
+                                <div class="image-block">
+                                    <img src="https://media.gettyimages.com/id/563818463/photo/band-performing-on-stage-at-music-concert.jpg?s=612x612&w=0&k=20&c=e0qzK3-5Wi07FErbiN-XQf-2RfJsSp8j_GG6n6_Kuvs=" alt="bollywoodhungama">
+                                </div>
+                                <div class="image-details">
+                                    <div class="image-card">
+                                        <div class="thumbnail-box">
+                                            <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png" alt="Thumbnail">
+                                        </div>
+                                        <div class="info-section">
+                                            <div class="video-title">Sangeet Ki Duniya</div>
+                                            <div class="channel-info">YouTube</div>
+                                            <div class="views-count">1.6M views</div>
+                                        </div>
+                                        <div class="menu-options">
+                                            <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000" alt="imgpointbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>   
+                        </div>
                     </div>
                 </section>
             </div>
         </main>
+    </div>
+    <div class="main-container-box">
         <footer class="footer-container-box">
             <div class="footer-box">
                 <div class="footer">About</div>
@@ -469,8 +515,8 @@
                 <div class="footer1">Policy & Safety</div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 YouTube, LLC</p>
-            </div>
+                <div class="footer1">© 2025 YouTube, LLC</div>
+            </div>            
         </footer>
     </div>
 </body>
